<resources>
    <string name="app_name">mazaman</string>
    <string name="action_settings">Settings</string>
    <string name ="resume">Resume</string>
    <string name="play">New Game</string>
    <string name="help">How To Play</string>

    <string name="howToPlayLabel">HOW TO PLAY</string>
    <string name="howToPlay">this Yellow body Mazing in a Hard Maze "MazeMan", our hero, munches his way around the map, eating all of the
        dots. However, life isn\'t easy for our young little hero. Along his journey, he faces
        spooky ghosts who will try to hurt him. Avoid them! In each corner of the map, there is a
        power pellet. If MazeMan eats a power pellet, he is temporarily gains the power to eat enemy
        ghosts.
    </string>
    <string name="controlsLabel">CONTROLS</string>
    <string name="controls">Up: Swipe Up\nDown: Swipe Down\nLeft: Swipe Left\nRight: Swipe Right\n</string>
    <string name="settingsLabel">Settings</string>
    <string name="resumeLabel">Resume</string>
    <string name="app">     App Name:<Name> MazaMan</Name> </string>
    <string name="ver">     Version <Version>1.0</Version> </string>
    <string name="names">   App Developers: <Names> Hallumi muhammed,
                                                    Roi shmeuli,
                                                    Yair shur</Names> </string>
    <string name="college">Developed in the Introduction to Mobile Computing Course, 2018. Instructors: Dr. Amnon Dekel and Amir Uval.
                            © 2018 - The Dept. of Software Engineering, Shenkar: Engineering. Design. Art.
    </string>
</resources>
