<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:orientation="vertical">

    <TextView
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:text="@string/app"
        android:textColor="@color/yellow"/>

    <TextView
        android:id="@+id/view2"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/ver"
        android:textColor="@color/white"
        android:textSize="17dp" />

    <TextView
        android:id="@+id/view3"
        android:layout_width="400dp"
        android:layout_height="122dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/names"
        android:textColor="@color/yellow"
        android:textSize="17dp" />

    <TextView
        android:id="@+id/view4"
        android:layout_width="268dp"
        android:layout_height="215dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:text="@string/college"
        android:textColor="@color/white"
        android:textSize="17dp" />

    <Button
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@android:color/holo_blue_bright"
        android:onClick="back"
        android:text="Back" />
</LinearLayout>