<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/black"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.hallumi.HallRoiYair.mazeman.roi.hallumi.HallRoiYair.mazeman.MainActivity"
    android:touchscreenBlocksFocus="false"
    android:foreground="#622424">

    <ImageView
        android:id="@+id/MainMenuImage"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/pacman"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignBottom="@+id/MainMenuImage"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="165dp">

        <Button
            android:layout_width="135dp"
            android:layout_height="50dp"
            android:onClick="showPlayScreen"
            android:text="@string/play"
            android:layout_marginBottom="5dp"/>

        <Button
            android:layout_width="135dp"
            android:layout_height="50dp"
            android:onClick="showHelpScreen"
            android:text="@string/help"/>

        <Button
            android:layout_width="135dp"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:onClick="showSettingScreen"
            android:text="@string/settingsLabel" />

        <Button
            android:layout_width="135dp"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:onClick="About"
            android:text="About" />




    </LinearLayout>

</RelativeLayout>
